--- a/assignment1/assgn1.tex
+++ b/assignment1/assgn1.tex
@@ -251,7 +251,7 @@ The execution of program is as follows and prints 52.
     \path [line] (increment2)  -- ++(3,0) |-   (decision3);
     
 \end{tikzpicture}
-\caption{Execution Order of the for loop} \label{fig:M1}
+\caption{Program Execution Timeline} \label{fig:M1}
 \end{figure}
 
 
