--- a/assignment1/assgn1.tex
+++ b/assignment1/assgn1.tex
@@ -305,7 +305,13 @@ Output = \begin{cases}
    \end{cases}
 $
 
-
+\\
+\\
+\\
+If num = 3k+1
+\[
+Output = \sum_{k=1}^{k=\frac{n-1}{3}} 10^{k-1}\times (3k-1)
+\]
 
 
 \end{document}
